[DevTools] Send Host header

Bug: 783439
Change-Id: Id6a3ed5bed787ef498f175a93b69ea39182055d6