net/server/web_socket_encoder.cc
@@ -20,7 +20,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace net {
 
 const char WebSocketEncoder::kClientExtensions[] =
-    "Sec-WebSocket-Extensions: permessage-deflate; client_max_window_bits";
+    "permessage-deflate; client_max_window_bits";
 
 namespace {
 
